--- a/zenyth.tasks.json
+++ b/zenyth.tasks.json
@@ -9,6 +9,6 @@
     "name": "weather-1",
     "runner": "bun",
     "exec": "/home/meplos/weather/index.ts",
-    "cron": "* * * * *"
+    "cron": "*/5 * * * *"
   }
 ]
