--- a/zenyth.tasks.json
+++ b/zenyth.tasks.json
@@ -3,12 +3,6 @@
     "name": "cron-test-1",
     "runner": "bin",
     "exec": "/bin/ls",
-    "cron": "* * * 2 *"
-  },
-  {
-    "name": "weather-1",
-    "runner": "bun",
-    "exec": "/home/meplos/weather/index.ts",
-    "cron": "*/5 * * * *"
+    "cron": "*/2 * * * * *"
   }
 ]
